@@ -59,7 +59,7 @@ To Build and install :
   > vi config.h
 - Build the daemon
   > make -f Makefile.linux
-  If not using uptables from your system, 
+  If not using iptables from your system, 
   > IPTABLESPATH=/path/to/iptables-1.4.1 make -f Makefile.linux
 - install as root using :
   > make -f Makefile.linux install
