@@ -44,6 +44,9 @@ bitrate_down=10000000
 secure_mode=no
 
 # default presentation url is http address on port 80
+# If set to an empty string, no presentationURL element will appear
+# in the XML description of the device, which prevents MS Windows
+# from displaying an icon in the "Network Connections" panel.
 #presentation_url=http://www.mylan/index.php
 
 # report system uptime instead of daemon uptime
